PyMaker/datas/object2/RawHTML/i18401/Python_DOC_referPages.syntax-error-its-there-but-where.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/826948/syntax-error-on-print-with-python-3">Syntax error on print with Python 3 [duplicate]</a>
<span class="question-originals-answer-count">
                    9 answers
                </span>
</li>
</ul>
</div>
<p>Once again Python's <em>helpful</em> error messages make me eat my keyboard.<br/>
I've checked the whole script forwards and backwards but can't find any "syntax error(s)".</p>
<p>Is there a decent debugger for Python or a helpful website which is able to scan my code for errors?</p>
<blockquote>
<p>C:\Users\Daapii\Desktop&gt;"foo.py"<br/>
    File "C:\Users\Daapii\Desktop\foo.py", line 26</p>
<pre><code>print "test"


           ^
</code></pre>
<p>SyntaxError: invalid syntax</p>
</blockquote>
<p><em>Python why u no tell me more!</em></p>
</div>
<div class="post-text" itemprop="text">
<p>If this is Python 3, then the <code>print</code> function now requires parenthesis. Try <code>print("test")</code>.</p>
<p>(EDIT: If Python continues to make you want to eat your keyboard, <a href="https://www.google.co.uk/search?q=chocolate%20keyboard&amp;tbm=isch" rel="nofollow">this might help</a>.)</p>
</div>
<div class="post-text" itemprop="text">
<p><code>print</code> is a function in Python 3:</p>
<pre><code>print ("test") 
</code></pre>
<p>Find other changes here: <a href="http://docs.python.org/3/whatsnew/3.0.html" rel="nofollow">docs</a></p>
</div>
<span class="comment-copy">Python 2 or 3?  (Why u no tell us more? :)</span>
<span class="comment-copy">fair enough, python 3 yes.</span>
<span class="comment-copy">Cool, then it looks like Joe has answered your question below.  Cheers.</span>
<span class="comment-copy">And the user can figure out if it is Python3 by putting <code>import sys</code>, and <code>print (sys.version)</code> at the top of the program.</span>
<span class="comment-copy">thanks @all will try it out and report back :) and thanks for the chocolate keyboard link</span>
<span class="comment-copy">+1 for working chocolate into your answer.</span>
<span class="comment-copy">that did the trick, I'm quite new to python so I'm still struggling, thanks for your help!</span>
<span class="comment-copy">@Joe: I think you used 'brackets' when you meant 'parenthesis'.</span>
